Remove margin from body

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 body {
   overflow: hidden;
+  margin: 0;
 }
 
 webview {
   height: 100%;
   position :absolute;
-  width: 100%; 
+  width: 100%;
 }
